--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form class="" action="/employees" method="post" >
           <label for=""> Employee Name</label>
           <input type="text" name="name" value="" />
-          <input type="submit" name="" value="Add Employee" />
+          <input type="submit" name="" value="Add Employee" onclick="retrieveEmployeeInfomation()"/>
         </form>
         <ul class="employee-list">
 
@@ -48,6 +48,6 @@
     <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
 
     <!-- Run the test suite automatically when the page loads. -->
-
+    <script src = 
   </body>
 </html>
