--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
 
     <!-- Run the test suite automatically when the page loads. -->
-    <script src = 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+    <script src = "index.js"></script>
   </body>
 </html>
