Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form class="" action="/employees" method="post" >
           <label for=""> Employee Name</label>
           <input type="text" name="name" value="" />
-          <input type="submit" name="" value="Add Employee" onclick="retrieveEmployeeInfomation()"/>
+          <input type="submit" name="" value="Add Employee"/>
         </form>
         <ul class="employee-list">
 
